[package]
name = "gh-repo-stats-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
prometheus_exporter = "0.8.4"
anyhow = "1.0.58"
log = "0.4.17"
env_logger = "0.9.0"